Images add and formatted.

--- a/src/css/item.css
+++ b/src/css/item.css
@@ -15,8 +15,23 @@
     box-sizing:border-box;
     -moz-box-sizing:border-box; /* Firefox */
     -webkit-box-sizing:border-box; /* Safari */}
-    #blogWrap p {
+#blogWrap p {
         color: gray;}
+#postTitle {
+    position: relative;
+    display: block;
+    margin-bottom: 2.5%;}
+#postTitle p {
+    display: inline;}
+#postImage {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: auto;
+    margin-bottom: 2.5%;}
+#postDesc {
+    position: relative;
+    display: block}
 
     
 @media (min-aspect-ratio: 1/1) {
@@ -25,4 +40,12 @@
         font-size: 2vw;
         padding-left: 1.5%;
         padding-right: 1.5%;}
+    #postImage {
+        display: inline-block;
+        float: right;
+        width: 50%;}
+    #postDesc {
+        display: inline-block;
+        width: 50%;
+    }
 }
