--- a/src/css/header.css
+++ b/src/css/header.css
@@ -17,6 +17,7 @@
     -webkit-box-sizing:border-box; /* Safari */}
 #nameTitle {
     position: relative;
+    display: inline-block;
     top: 50%;
     transform: translateY(-50%);-ms-transform: translateY(-50%);-webkit-transform: translateY(-50%);
     float: left;}
